// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings renders H1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders H2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders H3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders H4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders H5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2333333333333334em + 1px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: calc(-0.2958333333333334em + 1px);
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders H6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders H6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading1 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading1 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 1023px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h1
    class="emotion-0"
  >
    A Heading
  </h1>
</DocumentFragment>
`;

exports[`Headings renders Heading2 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading2 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h2
    class="emotion-0"
  >
    A Heading
  </h2>
</DocumentFragment>
`;

exports[`Headings renders Heading3 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading3 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h3
    class="emotion-0"
  >
    A Heading
  </h3>
</DocumentFragment>
`;

exports[`Headings renders Heading4 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading4 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #0a0a0a;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h4
    class="emotion-0"
  >
    A Heading
  </h4>
</DocumentFragment>
`;

exports[`Headings renders Heading5 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading5 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 24px;
  line-height: 1.1666666666666667;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.2333333333333334em + 1px);
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: calc(-0.2958333333333334em + 1px);
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h5
    class="emotion-0"
  >
    A Heading
  </h5>
</DocumentFragment>
`;

exports[`Headings renders Heading6 correctly with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a68c1;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;

exports[`Headings renders Heading6 with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 1px 0;
  font-family: "Source Serif Pro",serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  letter-spacing: 0;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.25em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3125em;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<h6
    class="emotion-0"
  >
    A Heading
  </h6>
</DocumentFragment>
`;
